--- a/app/templates/clock.hbs
+++ b/app/templates/clock.hbs
@@ -9,6 +9,6 @@
 </div>
 <div class="default-padding">
   {{tree-view data=tasks select=(action "select")
-    add=(action "add") edit=(action "edit")}}
+    add=(action "add")}}
 </div>
 {{outlet}}
