--- a/app/templates/statistics.hbs
+++ b/app/templates/statistics.hbs
@@ -1,1 +1,41 @@
-{{outlet}}
+<div class="statistics">
+  <div class="flex-row inline-center default-padding">
+    {{line-chart data=lineChartData}}
+  </div>
+  <div class="flex-row inline-center default-padding">
+    <div class="flex-column">
+      {{performance-info text=performanceText1}}
+      {{performance-info text=performanceText2}}
+    </div>
+  </div>
+  <div class="flex-row inline-center default-padding">
+    <div class="flex-column">
+      <h3>mode:</h3>
+      {{#power-select  
+        selected=selectedMode
+        options=modes onchange=(action "selectMode") 
+        as |mode|}}
+        {{mode}}
+      {{/power-select}}
+      <h3>{{selectedMode}}:</h3>
+      {{#power-select-multiple  
+        selected=selectedItems
+        options=modeItems onchange=(action "selectItems") 
+        as |item|}}
+        {{item}}
+      {{/power-select-multiple}}
+    </div>
+  </div>
+  <div class="default-padding">
+    {{calendar-chart}}
+  </div>
+  <div class="default-padding">
+    {{radar-chart}}
+  </div>
+  <!--
+  <div class="default-padding">
+    {{stream-chart}}
+  </div>
+  -->
+  {{outlet}}
+</div>
