--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,5 @@
 @import 'flex.css';
+@import 'statistics.css';
 @import 'components/menu-bar.css';
 @import 'components/default-button.css';
 @import 'components/default-clock.css';
@@ -6,6 +7,9 @@
 @import 'components/tree-view.css';
 @import 'components/tree-view-item.css';
 @import 'components/task-form.css';
+@import 'components/performance-info.css';
+@import 'components/calendar-chart.css';
+@import 'components/stream-chart.css';
 @import 'fonts.css';
 
 html, body{
@@ -39,4 +43,45 @@ textarea{
   padding-left: 25px;
 }
 
+.ember-power-select-trigger{
+  width: 370px;
+  min-height: 43px;
+  border: 3px solid #222 !important;
+  border-radius: 0;
+  letter-spacing: 3px;
+  font-size: 24px;
+  overflow: hidden;
+}
 
+.ember-power-select-trigger:focus {
+  outline: 0;
+}
+
+.ember-basic-dropdown-content{
+  border-radius: 0;
+  border: 3px solid #222 !important;
+  margin-top: 3px;
+  letter-spacing: 3px;
+}
+
+.ember-power-select-trigger-multiple-input{
+  margin: 0 0 0 10px;
+  letter-spacing: 0;
+}
+
+.ember-power-select-multiple-option{
+  background-color: #f2f2f2;
+}
+
+h3{
+  letter-spacing: 3px;
+  font-size: 24px;
+  font-weight: 100;
+  margin-bottom: 10px;
+}
+
+.loading-container img{
+  display: block;
+  width: 300px;
+  margin: 0 auto;
+}
