--- a/app/templates/clock.hbs
+++ b/app/templates/clock.hbs
@@ -10,7 +10,8 @@
   {{default-tabs options=tabOptions select=(action "taskStatus")}}
 </div>
 <div class="default-padding">
-  {{tree-view data=filteredTasks select=(action "select")
+  {{tree-view isLoading=isLoading 
+    data=filteredTasks select=(action "select")
     add=(action "add")}}
 </div>
 {{outlet}}
