--- a/app/templates/components/performance-info.hbs
+++ b/app/templates/components/performance-info.hbs
@@ -1,2 +1,8 @@
-<i class="icon icon-down-open-big"></i>
+{{#if (gt signal 0)}}
+  <i class="icon icon-up-open-big"></i>
+{{else if (eq signal 0)}}
+  <i class="icon icon-dash"></i>
+{{else}}
+  <i class="icon icon-down-open-big"></i>
+{{/if}}
 <p>{{text}}</p>
