creating tasks and pomodoros correcly, rewriting async code with async functions

--- a/app/templates/statistics.hbs
+++ b/app/templates/statistics.hbs
@@ -36,7 +36,7 @@
     {{calendar-chart data=calendarChartData}}
   </div>
   <div class="default-padding">
-    {{radar-chart}}
+    {{radar-chart data=radarChartData}}
   </div>
   <!--
   <div class="default-padding">
