--- a/app/styles/flex.css
+++ b/app/styles/flex.css
@@ -24,6 +24,10 @@
   justify-content: space-between;
 }
 
+.inline-space-around{
+  justify-content: space-around;
+}
+
 .inline-center{
   justify-content: center;
 }
@@ -32,4 +36,6 @@
   align-items: center;
 }
 
-
+.full-height{
+  height: 100%;
+}
