--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,6 +1,8 @@
 @import 'flex.css';
 @import 'statistics.css';
+@import 'loading.css';
 @import 'components/menu-bar.css';
+@import 'components/task-path.css';
 @import 'components/default-button.css';
 @import 'components/default-clock.css';
 @import 'components/default-tabs.css';
@@ -12,14 +14,20 @@
 @import 'components/stream-chart.css';
 @import 'components/modal-dialog.css';
 @import 'fonts.css';
+@import 'loader.min.css';
 
 html, body{
   margin: 0 auto;
-  max-width: 665px;
-  min-width: 300px;
-  padding-top: 30px;
+  //max-width: 665px;
+  //min-width: 300px;
+  //padding-top: 30px;
   font-family: "Nitti Grotesk",Helvetica,Arial,sans-serif;
 }
+
+.x-file--input{
+  display: none;
+}
+
 
 .default-padding{
   padding: 10px;
@@ -87,6 +95,41 @@ h3{
   margin: 0 auto;
 }
 
+.backup {
+  padding-bottom: 40px;
+}
+
 .backup button{
   margin-left: 10px;
+  width: 130px;
+  height: 30px;
+  font-size: 14px;
+}
+
+.ball-scale-multiple div {
+  background-color: #c8c8c8;
+}
+
+.app-body{
+  width: 100%;
+  max-width: 665px;
+  min-width: 300px;
+}
+
+.search-bar input{
+  width: 100%;
+  height: 43px;
+  margin: 10px 0 10px 0;
+  border: 3px solid #222;
+  font-size: 24px;
+  letter-spacing: 4px;
+  padding-left: 10px;
+}
+
+input:focus {
+  outline-width: 0;
+}
+
+textarea:focus {
+  outline-width: 0;
 }
