--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,29 +1,29 @@
-{{#if showDialog}}
+{{#if modal.showDialog}}
   {{#modal-dialog 
-    msg="Do you really wish to load this data, all your previous data will be deleted, the app will automatically refresh after the data is loaded"
-    trueOptionText="load"
-    falseOptionText="cancel"
-    close=(action "confirmLoad")}}
-    {{#if loadingData}}
-      <p>loading...</p>
-    {{else}}
-      {{dialogMsg}}
-    {{/if}}
+    trueOptionText=modal.trueDialogText
+    falseOptionText=modal.falseDialogText
+    hideButtons=modal.hideButtons
+    close=(action modal.dialogFunc)}}
+    {{modal.dialogMsg}}
   {{/modal-dialog}}
 {{/if}}
 <div class="flex-row backup default-padding">
-  {{#default-button onClick=(action "downloadData")}}
-    download data
-  {{/default-button}}
   {{#x-file-input name="files" 
     multiple=false
     action=(action "didSelectFiles")}}
     {{#default-button}}
-      upload data
+      <i class="icon icon-upload">
+      </i>
+      load 
     {{/default-button}}
   {{/x-file-input}}
+  {{#default-button onClick=(action "downloadData")}}
+    <i class="icon icon-download">
+    </i>
+    download
+  {{/default-button}}
 </div>
-<div class="default-padding">
+<div class="flex-row inline-center default-padding">
   {{menu-bar}}
 </div>
-{{outlet}}
+{{liquid-outlet}}
