last commit before production

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,7 @@
     trueOptionText=modal.trueDialogText
     falseOptionText=modal.falseDialogText
     hideButtons=modal.hideButtons
+    infoMode=modal.infoMode
     close=(action modal.dialogFunc)}}
     {{modal.dialogMsg}}
   {{/modal-dialog}}
