--- a/app/templates/components/modal-dialog.hbs
+++ b/app/templates/components/modal-dialog.hbs
@@ -1,4 +1,6 @@
-<div {{action "close" false}} class="overlay">
+<div {{action "close" false}} 
+  data-test-close-button=true
+  class="overlay">
   <div class="box flex-column">
     <div class="flex-row inline-end default-padding">
       <a {{action "close" false}}>x</a>
@@ -10,12 +12,20 @@
       <div class="flex-row inline-end default-padding">
         <div>
           {{#if (eq hideButtons false)}}
-            {{#default-button onClick=(action "close" true )}}
-              {{trueOptionText}}
-            {{/default-button}}
-            {{#default-button onClick=(action "close" false)}}
-              {{falseOptionText}}
-            {{/default-button}}
+            {{#if infoMode}}
+              {{#default-button 
+                data-test-ok-button=true
+                onClick=(action "close" true )}}
+                {{trueOptionText}}
+              {{/default-button}}
+            {{else}}
+              {{#default-button onClick=(action "close" true )}}
+                {{trueOptionText}}
+              {{/default-button}}
+              {{#default-button onClick=(action "close" false)}}
+                {{falseOptionText}}
+              {{/default-button}}
+            {{/if}}
           {{/if}}
         </div>
       </div>
