--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 {{head-layout}}
-{{title "24:58"}}
+{{title time.pomodoro}}
 {{#if modal.showDialog}}
   {{#modal-dialog 
     trueOptionText=modal.trueDialogText
