--- a/app/templates/statistics.hbs
+++ b/app/templates/statistics.hbs
@@ -1,3 +1,4 @@
+{{title "statistics"}}
 <div class="statistics">
   <div class="flex-row inline-center default-padding">
     {{line-chart data=lineChartData}}
