--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -117,7 +117,7 @@ h3{
 }
 
 .search-bar input{
-  width: 100%;
+  width: 98%;
   height: 43px;
   margin: 10px 0 10px 0;
   border: 3px solid #222;
@@ -132,4 +132,14 @@ input:focus {
 
 textarea:focus {
   outline-width: 0;
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+  //padding: 10px;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
 }
