--- a/app/templates/components/menu-bar.hbs
+++ b/app/templates/components/menu-bar.hbs
@@ -1,7 +1,10 @@
 <div>
-  {{link-to "" "clock" class="icon icon-clock-streamline-time"}}
+  {{link-to "" "clock" 
+    class="clock-button icon icon-clock-streamline-time"}}
 </div>
 <div> 
-  {{link-to "" "statistics" class="icon icon-graph"}}
-  {{link-to "" "tasks.new" class="icon icon-plus"}}
+  {{link-to "" "statistics" 
+    class="statistics-button icon icon-graph"}}
+  {{link-to "" "tasks.new" 
+    class="new-task-button icon icon-plus"}}
 </div>
