--- a/app/styles/components/default-button.css
+++ b/app/styles/components/default-button.css
@@ -8,6 +8,13 @@
   cursor: pointer;
 }
 
+.icon-button{
+  width: 40px !important;
+  font-size: 22px !important;
+  margin: 0;
+  padding-top: 5px;
+}
+
 .caution-button{
   background-color: #F44336;
   height: 48px;
