--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,21 +10,31 @@
     {{modal.dialogMsg}}
   {{/modal-dialog}}
 {{/if}}
-<div class="flex-row backup default-padding">
-  {{#x-file-input name="files" 
-    multiple=false
-    action=(action "didSelectFiles")}}
-    {{#default-button}}
-      <i class="icon icon-upload">
+<div class="flex-row inline-space-between backup default-padding">
+  <div>
+    {{#x-file-input name="files" 
+      multiple=false
+      action=(action "didSelectFiles")}}
+      {{#default-button class="upload-button"}}
+        <i class="icon icon-upload">
+        </i>
+        load 
+      {{/default-button}}
+    {{/x-file-input}}
+    {{#default-button class="download-button"
+      onClick=(action "downloadData")}}
+      <i class="icon icon-download">
       </i>
-      load 
+      download
     {{/default-button}}
-  {{/x-file-input}}
-  {{#default-button onClick=(action "downloadData")}}
-    <i class="icon icon-download">
-    </i>
-    download
-  {{/default-button}}
+  </div>
+  <div>
+    {{#default-button class="icon-button" 
+      onClick=(action "showHelp")}}
+      <i class="icon icon-help-circled">
+      </i>
+    {{/default-button}}
+  </div>
 </div>
 <div class="flex-row inline-center default-padding">
   {{menu-bar}}
