push notifications and break time signal added

--- a/app/templates/clock.hbs
+++ b/app/templates/clock.hbs
@@ -4,6 +4,9 @@
     <div class="flex-row inline-center default-padding">
       {{task-path paths=taskPath}}
     </div>
+    <div class="flex-row inline-center">
+      <h3>{{breakTitle}}</h3>
+    </div>
     <div class="default-padding">
       {{default-clock 
         time=time 
