bud on task status backup solved, minor enhancements added

--- a/app/templates/clock.hbs
+++ b/app/templates/clock.hbs
@@ -1,4 +1,4 @@
-{{title selectedTask.name}}
+{{title (concat selectedTask.name " " breakTitle)}}
 <div class="flex-row inline-center">
   <div class="app-body">
     <div class="flex-row inline-center default-padding">
