total amount of time in hours included to the tasks

--- a/app/templates/components/tree-view-item.hbs
+++ b/app/templates/components/tree-view-item.hbs
@@ -3,6 +3,9 @@
   <div class="item-name" >
     {{data.name}}
   </div>
+  <div class="item-info">
+    {{totalTime}}
+  </div>
   <div class="flex-row inline-space-between item-controls">
     <div>
       {{link-to "" "tasks.task.edit" data 
