--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -28,12 +28,13 @@
       download
     {{/default-button}}
   </div>
-  <div>
+  <div class="flex-row inline-space-between">
     {{#default-button class="icon-button" 
       onClick=(action "showHelp")}}
       <i class="icon icon-help-circled">
       </i>
     {{/default-button}}
+    {{link-to "configiguration" "configuration" class="config-button"}}
   </div>
 </div>
 <div class="flex-row inline-center default-padding">
